[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entities/Environment/LevelTileMap/LevelTile.gd" type="Script" id=1]
[ext_resource path="res://Entities/Environment/LevelTileMap/PureWhiteTile.png" type="Texture" id=2]
[ext_resource path="res://Entities/Characters/Player/PlayerSprite.png" type="Texture" id=3]
[ext_resource path="res://Resources/Audio/Effects/TileDetectPlayer1.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/Effects/TileDetectMouse.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Audio/Effects/TileUndetectMouse.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Audio/Effects/TileDig.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Audio/Effects/TilesFlip.wav" type="AudioStream" id=8]

[sub_resource type="Curve" id=1]
resource_local_to_scene = true
max_value = 3.0
_data = [ Vector2( 0, 0 ), 0.0, 0.966233, 0, 0, Vector2( 0.609971, 0.736364 ), 2.08877, 2.08877, 0, 0, Vector2( 1, 3 ), 5.67073, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.486364 ), 0.0, 0.079665, 0, 0, Vector2( 0.612613, 0.422727 ), -0.516852, -0.516852, 0, 0, Vector2( 1, 0 ), -1.51364, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="LevelTile" type="StaticBody2D" groups=[
"tile",
]]
script = ExtResource( 1 )
color_array = [ Color( 0.168627, 0.176471, 0.258824, 1 ), Color( 0.552941, 0.6, 0.682353, 1 ), Color( 0.929412, 0.94902, 0.956863, 0 ), Color( 0.937255, 0.137255, 0.235294, 1 ), Color( 0.137255, 0.937255, 0.470588, 1 ) ]
delay_curve = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 2 )

[node name="BorderSprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="CenterSprite" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.176471, 0.258824, 1 )
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="BreakParticles" type="CPUParticles2D" parent="."]
position = Vector2( 32, 32 )
emitting = false
amount = 28
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 21, 21 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
scale_amount = 0.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 3 )
color = Color( 0.168627, 0.176471, 0.258824, 1 )
hue_variation_curve = SubResource( 4 )

[node name="GoodParticles" type="CPUParticles2D" parent="."]
position = Vector2( 32, 32 )
z_index = 5
emitting = false
amount = 128
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
angular_velocity = 150.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
scale_amount = 0.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 3 )
color = Color( 0.137255, 0.937255, 0.470588, 1 )
hue_variation_curve = SubResource( 4 )

[node name="TileDetectMouse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -27.0
bus = "Effects"

[node name="TileUndetectMouse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -27.0
bus = "Effects"

[node name="TileDetectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 25.0
bus = "Effects"

[node name="TileDig" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
pitch_scale = 2.0
bus = "Effects"

[node name="TilesFlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -17.0
bus = "Effects"
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
